--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
     "sass": "^1.64.1",
+    "tailwindcss": "^3.3.3",
     "uid": "^2.0.2",
     "vite": "^4.3.9"
   }
